# zbinfigs

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  STATUS.md  USRSE25_notebook.ipynb  error_notes.md  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  publish.yml
_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: environment.pickle  index.doctree
_build/html/_sources/: index.md.txt
docs/: conf.py  constraints.txt  index.md  index.rst  modules.rst  requirements.in  requirements.txt  zbinfigs.rst
examples/: myannotations.csv  test.py  test_notebook.ipynb  test_zotero_collection.csv
examples/Zotero/storage/3R4G3U4P/: .zotero-ft-cache  0022236477902633.html
examples/Zotero/storage/67SG4HV8/: .zotero-ft-cache  .zotero-ft-info
examples/Zotero/storage/76NZSYFS/: .zotero-ft-cache  .zotero-ft-info
examples/Zotero/storage/7P9XZS3U/: .zotero-ft-cache  .zotero-ft-info
examples/Zotero/storage/AGVHQH62/: .zotero-ft-cache
examples/Zotero/storage/B5QRBI2N/: .zotero-ft-cache
examples/Zotero/storage/M5BG3R82/: .zotero-ft-cache  S0010854508001276.html
examples/Zotero/storage/W2XN7R45/: .zotero-ft-cache  .zotero-ft-info
examples/mypdfs/: figure_summary.csv  gathered_figures_0_2.csv  gathered_figures_3_4.csv  gathered_figures_5_6.csv
examples/mypdfs/88NPEABZ/: 88NPEABZ.md
examples/mypdfs/943ET5GN/: 943ET5GN.md
examples/mypdfs/FCAXR8L3/: FCAXR8L3.md
examples/mypdfs/H4KJMJGL/: H4KJMJGL.md
examples/mypdfs/RE9DHFW6/: RE9DHFW6.md
examples/mypdfs/RU3WXEZP/: RU3WXEZP.md
examples/mypdfs/Z7Z8UGAW/: Z7Z8UGAW.md
src/zbinfigs/: __init__.py  collection.py  hello.py  utils.py
tests/: test_collection.py  test_utils.py
