[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zbinfigs"
version = "0.10.2"
authors = [
  { name="Isaac Spackman", email="ispackman@mines.edu" },
]
description = "A package for figure classification from a zotero collection of scholarly articles"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "matplotlib",
  "bs4",
  "xhtml2pdf",
  "marker-pdf",
  "tqdm"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "pytest",
    "coverage"
]
docs = [
  "sphinx_rtd_theme",
  "myst_parser >=0.13",
  "sphinx >=4.0", 
  "sphinx-copybutton",
  "sphinx-autodoc-typehints",
]

[project.urls]
"Source Code" = "https://github.com/spackman/zbinfigs"

# Ruff Linter
[tool.ruff]
src = ["src"]
extend-include = ["*.ipynb"]

# Use Numpy-style docstrings.
[tool.ruff.lint]
select = ["D"]
[tool.ruff.lint.pydocstyle]
convention = "numpy"